Fixed responsivity issues, color, z-index, etc.

--- a/frontend/src/components/CountryModal/countryModal.scss
+++ b/frontend/src/components/CountryModal/countryModal.scss
@@ -6,19 +6,19 @@
 .modal {
   background: $color-background-bright;
   border-radius: 10px;
-
   top: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   left: 5%;
-  min-height: 560px;
-  min-width: 260px;
+  min-height: 56rem;
+  min-width: 26rem;
+  max-width: 48rem;
   width: 40%;
   overflow-y: hidden;
   position: absolute;
-  z-index: 500;
+  z-index: 1100;
 
   @media (max-width: 1300px) {
     width: 40%;
@@ -40,11 +40,11 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-
+    max-width: 33rem;
     .ui.button {
       font-size: 1.4rem;
       width: 100%;
-      margin: 2% auto;
+      margin: 1rem auto;
     }
     p {
       width: 90%;
@@ -69,64 +69,57 @@
     }
   } // end modal Header
 
-.top-content {
-  width: 90%;
-}
-.middle-content {
-  width: 95%;
-  .ui.form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    margin: 3% auto;
-
-    h3 {
-      font-size: 2rem;
-    }
-
-    .ui.input {
-      border: 1px solid $color-form-border;
-      border-radius: 5px;
+  .content {
+    width: 95%;
+    .ui.form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       width: 100%;
-      min-height: 10rem;
-      text-align: center;
-      margin: 5% auto;
-    }
+      margin: 3% auto;
 
-    .ui.button {
-      text-align: center;
-      width: 90%;
-      padding: 5%;
-      margin: 5% auto;
-      font-size: 1.2rem;
+      h3 {
+        font-size: 2rem;
+      }
 
-      @media (max-width: 500px) {
+      .ui.input {
+        border: 1px solid $color-form-border;
+        border-radius: 5px;
+        width: 100%;
+        min-height: 10rem;
+        text-align: center;
+        margin: 5% auto;
+      }
+
+      .ui.button {
+        text-align: center;
         width: 90%;
         padding: 5%;
         margin: 5% auto;
+        font-size: 1.2rem;
+
+        @media (max-width: 500px) {
+          width: 90%;
+          padding: 5%;
+          margin: 5% auto;
+        }
+      }//end Form
+    }//end note
+    .delete{
+      bottom: 5%;
+      position: absolute;
+      width: 50%;
+    }
+  
+    .clear-button {
+      border: 1px solid $color-danger;
+      background: $color-background-bright;
+      color: $color-danger;
+      &:hover {
+        background: $color-danger;
+        color: $color-background-bright;
       }
-    }//end Form
-    // input {
-    //   width: 90%;
-    //   margin: 0 auto;
-    //   border: 1px solid black;
-    // }
-
-  }//end note
-}//end middle content
-
-.bottom-content {
-  width: 90%;
-
-  .header {
-    margin: 5% auto;
-  }
+    }
+  }//end content
 }
 
-.delete{
-  bottom: 5%;
-  position: absolute;
-  width: 50%;
-}
-}
